--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Setup</title>
+  <title>Lesson 14</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.33/browser.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app"></div>
